--- a/src/pages/login/LoginPage.css
+++ b/src/pages/login/LoginPage.css
@@ -1,3 +1,9 @@
+.noLinkStyle {
+  text-decoration: none;
+  color: #b28451; }
+  .noLinkStyle:active {
+    color: #c69963; }
+
 *,
 *::before,
 *::after {
@@ -59,14 +65,19 @@ body {
   grid-area: navBar;
   grid-template-columns: minmax(1rem, 1fr) minmax(min-content, 30rem) 2fr minmax(min-content, 10rem) minmax(min-content, 10rem) minmax(min-content, 10rem) minmax(1rem, 1fr);
   grid-template-areas: ". navBar_logo . navBar_alert navBar_login navBar_signUp .";
-  background-color: #232325; }
+  border-bottom-width: 0.1rem;
+  border-bottom-color: black;
+  border-bottom-style: solid;
+  background-color: #242933; }
   .navBar__logo {
     grid-area: navBar_logo;
     justify-self: center;
     align-self: center; }
     .navBar__logo__text {
       font-size: 3.8rem;
-      font-family: "Niramit", sans-serif; }
+      font-family: "Niramit", sans-serif;
+      text-decoration: none;
+      color: #b28451; }
   .navBar__login {
     grid-area: navBar_login;
     justify-self: end;
@@ -144,7 +155,7 @@ body {
     grid-template-rows: 3vh 10vh 5vh 5vh 5vh 3vh 3vh;
     grid-template-areas: ". . ." ". loginSection__loginForm__loginText ." ". loginSection__loginForm__accountInput ." ". loginSection__loginForm__passInput ." ". loginSection__loginForm__loginButton ." ". loginSection__loginForm__signUpText ." ". . .";
     background-color: #242933;
-    box-shadow: 0.1rem 0.1rem 0.5rem 0 black; }
+    box-shadow: 0.1rem 0.1rem 1rem 0 black; }
     .loginSection__loginForm__loginText {
       grid-area: loginSection__loginForm__loginText;
       text-align: center;
@@ -159,7 +170,8 @@ body {
       border-bottom-style: solid;
       border-bottom-width: 0.1rem;
       border-bottom-color: grey;
-      padding-left: 1rem; }
+      padding-left: 1rem;
+      box-shadow: 0.1rem 0.1rem 1rem 0 black; }
       .loginSection__loginForm__accountInput:focus {
         outline: none; }
     .loginSection__loginForm__passInput {
@@ -167,7 +179,8 @@ body {
       border-radius: 0 0 0.5rem 0.5rem;
       border: none;
       padding-left: 1rem;
-      font-size: 2rem; }
+      font-size: 2rem;
+      box-shadow: 0.1rem 0.1rem 1rem 0 black; }
       .loginSection__loginForm__passInput:focus {
         outline: none; }
     .loginSection__loginForm__loginButton {
@@ -176,14 +189,15 @@ body {
       background-color: #b28451;
       border: 0;
       font-size: 2rem;
-      box-shadow: 0.1rem 0.1rem 0.5rem 0 black;
+      box-shadow: 0.1rem 0.1rem 1rem 0 black;
       border-radius: 0.5rem;
       outline: none;
-      transition: transform 0.1s 0s; }
+      transition: all 0.2s; }
       .loginSection__loginForm__loginButton:hover {
-        box-shadow: 0.3rem 0.3rem 0.3rem 0 black;
-        transform: translateY(-0.1rem); }
+        transform: translateY(-0.25rem);
+        box-shadow: 0.3rem 0.3rem 3rem 0 black; }
       .loginSection__loginForm__loginButton:active {
-        transform: translateY(-0.1rem); }
+        outline: none;
+        transform: translateY(0.25rem); }
     .loginSection__loginForm__signUpText {
       grid-area: loginSection__loginForm__signUpText; }
