--- a/src/sass/_loginSection.scss
+++ b/src/sass/_loginSection.scss
@@ -29,7 +29,7 @@
       ". . .";
 
     background-color: $color-background-minority;
-    box-shadow: $pickSection-boxShadow;
+    box-shadow: $boxShadow;
 
     &__loginText {
       grid-area: loginSection__loginForm__loginText;
@@ -48,6 +48,8 @@
       border-bottom-width: 0.1rem;
       border-bottom-color: grey;
       padding-left: 1rem;
+      box-shadow: $boxShadow;
+
       &:focus {
         outline: none;
       }
@@ -59,6 +61,8 @@
       border: none;
       padding-left: 1rem;
       font-size: 2rem;
+      box-shadow: $boxShadow;
+
       &:focus {
         outline: none;
       }
@@ -70,16 +74,17 @@
       background-color: $color-foreground-dark;
       border: 0;
       font-size: 2rem;
-      box-shadow: $pickSection-boxShadow;
+      box-shadow: $boxShadow;
       border-radius: 0.5rem;
       outline: none;
-      transition: transform 0.1s 0s;
+      transition: all 0.2s;
       &:hover {
-        box-shadow: $pickSection-boxShadow-elevate;
-        transform: translateY(-0.1rem);
+        transform: translateY(-0.25rem);
+        box-shadow: $boxShadow-elevate;
       }
       &:active {
-        transform: translateY(-0.1rem);
+        outline: none;
+        transform: translateY(0.25rem);
       }
     }
 
