--- a/src/sass/_pickSection.scss
+++ b/src/sass/_pickSection.scss
@@ -1,15 +1,3 @@
-@keyframes pickSection_findMatch_button_animation_clicked {
-  0% {
-    transform: translateY(1rem);
-  }
-  50% {
-    transform: translateY(-1rem);
-  }
-  100% {
-    transform: translateY(0);
-  }
-}
-
 .pickSection {
   display: grid;
   grid-area: pickSection;
@@ -31,7 +19,7 @@
     grid-area: pickSection__champSelect;
     grid-template-columns: repeat(6, 1fr);
     grid-template-rows: repeat(auto-fill, 11rem);
-    box-shadow: $pickSection-boxShadow;
+    box-shadow: $boxShadow;
     overflow-y: auto;
     background-color: $color-background-minority;
     overflow-x: hidden;
@@ -73,7 +61,7 @@
     overflow-y: auto;
     overflow-x: hidden;
     background-color: $color-background-minority;
-    box-shadow: $pickSection-boxShadow;
+    box-shadow: $boxShadow;
     &__title {
       grid-area: pickSection__opponentSide__title;
       display: flex;
@@ -113,7 +101,7 @@
     align-items: center;
     // border: 2rem solid $color-background-minority;
     // border-radius: 0.5rem;
-    box-shadow: $pickSection-boxShadow;
+    box-shadow: $boxShadow;
     &__title {
       grid-area: pickSection__userSide__title;
       justify-self: center;
@@ -161,7 +149,7 @@
       font-size: 2rem;
       height: 3.5rem;
       color: $color-foreground;
-      box-shadow: $pickSection-boxShadow;
+      box-shadow: $boxShadow;
     }
     &__icon {
       grid-area: laneIcons;
@@ -195,18 +183,18 @@
       width: 20rem;
       height: 7rem;
       background-color: $color-foreground;
-      box-shadow: $pickSection-boxShadow;
+      box-shadow: $boxShadow;
       border: 0;
       font-size: 3rem;
       font-family: $font-special;
-      transition: 0.2s 0s;
-      &:focus {
-        outline: 0;
-        animation: pickSection__findMatch__button__animation__clicked 1s;
-      }
+      transition: all 0.2s;
       &:hover {
-        transform: translateY(-0.4rem);
-        box-shadow: $pickSection-boxShadow-elevate;
+        transform: translateY(-0.25rem);
+        box-shadow: $boxShadow-elevate;
+      }
+      &:active {
+        outline: none;
+        transform: translateY(0.25rem);
       }
     }
   }
