--- a/src/sass/_pickSection.scss
+++ b/src/sass/_pickSection.scss
@@ -9,20 +9,33 @@
   grid-template-areas:
     ". . . pickSection__searchBar ."
     ". pickSection__userSide__title pickSection__userSide pickSection__champSelect ."
-    ". . . pickSection__champSelect ."
+    ". . pickSection__selectLane pickSection__champSelect ."
     ". pickSection__opponentSide__title pickSection__opponentSide pickSection__champSelect ."
     ". . pickSection__findMatch__button pickSection__champSelect .";
   grid-gap: 1rem;
   background-color: $color-background-majority;
 
-  &__settingsOverlay {
-    grid-area: pickSection__settingsOverlay;
-    grid-row: 2 / span 1;
-    background-color: black;
-    opacity: 0.2;
-    z-index: 2;
-    &__settings {
-      background-color: blue;
+  &__selectLane {
+    grid-area: pickSection__selectLane;
+    display: grid;
+
+    &__button {
+      text-align: center;
+      background-color: $color-foreground-dark;
+      border: none;
+      font-size: 2rem;
+      font-family: $font-special;
+      box-shadow: $boxShadow;
+      transition: all 0.2s;
+
+      &:hover {
+        transform: translateY(-0.25rem);
+        box-shadow: $boxShadow-elevate;
+      }
+      &:active {
+        outline: none;
+        transform: translateY(0.25rem);
+      }
     }
   }
 
